Changelog
=========

3.0.3 (unreleased)
------------------


3.0.2 (2012-06-22)
------------------

- Add Anonymous as a default role for Public permission.

3.0.1 (2012-05-24)
------------------

- Fix tests under Python 2.6.

3.0 (2012-05-12)
----------------

- Added decorators for public, private and protected security declarations.

- Update tests to take advantage of automatic test suite discovery.

2.13.7 (2011-12-12)
-------------------

- Exclude compiled `.so` and `.dll` files from source distributions.

2.13.6 (2011-12-12)
-------------------

- Added `manifest.in` to ensure the inclusion of the `include` directory into
  the release.

2.13.5 (2011-12-12)
-------------------

- Apply changes made available in `Products.Zope_Hotfix_20111024` and make them
  more robust.

2.13.4 (2011-01-11)
-------------------

- Return the created user in _doAddUser.

- Added IUser interface.

- LP #659968: Added support for level argument to the ``__import__`` function
  as introduced in Python 2.5. Currently only level=-1 is supported.

2.13.3 (2010-08-28)
-------------------

- Added a ``role`` subdirective for the ``permission`` ZCML directive. If any
  roles are specified, they will override the default set of default roles
  (Manager).

2.13.2 (2010-07-16)
-------------------

- Added ``override_existing_protection`` parameter to the protectName helper.

2.13.1 (2010-06-19)
-------------------

- Restore security declarations for deprecated ``sets`` module.

2.13.0 (2010-06-19)
-------------------

- Released as separate package.