@@ -51,9 +51,11 @@ def getRoles(container, name, value, default):
 
     if roles is None or isinstance(roles, tuple_or_list):
         return roles
-    
-    rolesForPermissionOn = getattr(roles, 'rolesForPermissionOn', None)
-    if rolesForPermissionOn is not None:
-        roles = rolesForPermissionOn(value)
+
+    # XXX: Do not override global variable `rolesForPermissionOn`.
+    # XXX: Use different variable name instead.
+    roles_rolesForPermissionOn = getattr(roles, 'rolesForPermissionOn', None)
+    if roles_rolesForPermissionOn is not None:
+        roles = roles_rolesForPermissionOn(value)
 
     return roles
