@@ -3,7 +3,8 @@ Changelog
 
 3.0.3 (unreleased)
 ------------------
-
+- Fix a bug in ZopeSecurityPolicy.py. Global variable `rolesForPermissionOn`
+  could be overridden if __role__ had custom rolesForPermissionOn.
 
 3.0.2 (2012-06-22)
 ------------------
